--- a/requirements.txt
+++ b/requirements.txt
@@ -202,7 +202,7 @@ jupyterlab-git
 
 # Primary library for Excel (both .xls and .xlsx); handles formulas, charts, formatting (~8 MB)
 # Used by pandas and other libraries.
-# openpyxl
+openpyxl
 
 # For writing advanced Excel files (.xlsx)
 # xlsxwriter
